package br.com.naildesigner.servico_service;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class ServicoServiceApplication {

	public static void main(String[] args) {
		SpringApplication.run(ServicoServiceApplication.class, args);
	}

}
